--- a/tictactoe.css
+++ b/tictactoe.css
@@ -3,46 +3,101 @@
 }
 
 body {
-    background-color: rgb(180, 248, 226);
+    background-color: rgb(0, 0, 0);
     max-width: 960px;
     margin: 0 auto;
     text-align: center;
+    background: url(images/stars.gif);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 h1 {
     font-size: 300%;
     text-align: center;
     padding: 1em;
-    background-color: rgb(19, 58, 58);
+    background: url(images/last.gif);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-color: rgb(0, 0, 0);
     color: brown;
-    margin-top: 1em;
+    margin-top: 2em;
 }
 
 button {
-    width: 40px;
-    height: 40px;
+    width: 60px;
+    height: 60px;
     border: 2px solid black;
     border-radius: 50%;
     margin: 0.5em;
     text-align: center;
+    
+}
+
+#counter1 {
+    color: red;
+    font-size: 20px;
+}
+
+#counter2 {
+    color: red;
+    font-size: 20px;
+}
+
+button:hover {
+    background-color: rgb(175, 34, 34);
+}
+
+#turn {
+    color:white;
+}
+
+#winner {
+    color: blanchedalmond;
 }
 
 #resetGame {
+    color: white;
     margin: 2em;
     font-size: 80%;
 }
 
 .blue {
     background-color: blue;
+    background: url(images/images.png);
+    background-size: contain;
 }
 
 .yellow {
     background-color: yellow;
+    background: url(images/png-transparent-graphy-frames-circle-circle-frame-circle-frame-monochrome-black.png);
+    background-size: contain;
 }
 
 .reset {
+    width: 40px;
+    height: 40px;
     border-radius: 0.5em;
     width: 90px;
     box-shadow: 2em;
     background-color: aliceblue;
+}
+
+
+#modalBox {
+    text-align: center;
+    visibility: hidden;
+    position: fixed;
+    z-index: 1;
+    background-color: red;
+    opacity: 90%;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: url(images/chalkboard-background-wallpaper-1366x768_46\ \(1\).jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
