--- a/tictactoe.css
+++ b/tictactoe.css
@@ -35,6 +35,14 @@ button {
     
 }
 
+h2 {
+    font-family: 'Bangers', cursive;
+}
+
+aside {
+    font-family: 'Bangers', cursive;
+}
+
 #counter1 {
     color: red;
     font-size: 20px;
@@ -45,8 +53,12 @@ button {
     font-size: 20px;
 }
 
-button:hover {
+.game:hover {
     background-color: rgb(175, 34, 34);
+    background: url(images/push.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #turn {
@@ -55,12 +67,6 @@ button:hover {
 
 #winner {
     color: blanchedalmond;
-}
-
-#resetGame {
-    color: white;
-    margin: 2em;
-    font-size: 80%;
 }
 
 .blue {
@@ -75,8 +81,11 @@ button:hover {
     background-size: contain;
 }
 
+.reset:hover{
+    background-color: aqua;
+}
+
 .reset {
-    width: 40px;
     height: 40px;
     border-radius: 0.5em;
     width: 90px;
@@ -84,20 +93,27 @@ button:hover {
     background-color: aliceblue;
 }
 
-
 #modalBox {
     text-align: center;
     visibility: hidden;
     position: fixed;
     z-index: 1;
+    color: white;
     background-color: red;
-    opacity: 90%;
+    opacity: 100%;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
-    background: url(images/chalkboard-background-wallpaper-1366x768_46\ \(1\).jpg);
+    background: url(images/winner.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    
+}
+
+#popup {
+    color: black;
+    font-size: 35px;
+    font-family: 'Bangers', cursive;
 }
