--- a/tictactoe.css
+++ b/tictactoe.css
@@ -105,7 +105,6 @@ aside {
     height: 100%;
     top: 0;
     left: 0;
-    background: url(images/winner.webp);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -114,6 +113,8 @@ aside {
 
 #popup {
     color: black;
-    font-size: 35px;
+    font-size: 45px;
     font-family: 'Bangers', cursive;
+    text-align: left;
+    margin-left: 12em;
 }
